2002-07-01 04:54 UTC Mike Romberg <romberg@fsl.noaa.gov>

	* xbase.el (xbase-indent-line): Don't indent if the current line
	already is indented correctly.  This prevents unneeded buffer saves
	if a user hits C-i as a matter of habbit.

2002-06-28 12:46 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Updated font-lock-defaults so that the
	#ifdef/#ifndef "argument" is displayed in the "varable" face.

2002-06-28 10:16 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-find-statement-backward): Now only looks for
	rules that claim they are statements. Ignores non-statement rules.

2002-06-28 10:15 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-level): Added support for indentation
	fixed at a specific column.

2002-06-28 10:12 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-rules, xbase-rule-statement-p)
	(xbase-rule-statement-p): Added support for statement and
	non-statement oriented rules. Seperated if...endif and friends out
	from #if...#endif and friends.

2002-06-28 10:10 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode-syntax-table): Added "#" to the "w" class.

2002-06-28 09:59 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-directive-face): Now defaults to
	font-lock-builtin-face instead of the keyword face.

2002-06-27 07:45 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-add-rule): Added.

2002-06-11 15:12 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-font-lock-statements): Removed duplicate mention
	of "static".

2002-05-27 11:48 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Renamed `is-defun-p' back to
	`defunp' now that I've had a fix from RMS for the indentation
	problem.

2002-05-24 18:07 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Added joint copyright.

2002-05-24 15:34 UTC+0100  Dave Pearson  <davep@davep.org>
