@@ -347,10 +347,11 @@ Note: WHOLE-EXP is currently ignored."
   (interactive "p")
   (let ((pos (- (point-max) (point))))
     (back-to-indentation)
-    (when (not (eq (current-column) (xbase-indent-level)))
-      (beginning-of-line)
-      (delete-horizontal-space)
-      (indent-to (xbase-indent-level)))
+    (let ((indent-level (xbase-indent-level)))
+      (when (not (eq (current-column) indent-level))
+        (beginning-of-line)
+        (delete-horizontal-space)
+        (indent-to indent-level)))
     (let ((target-pos (- (point-max) pos)))
       (when (> target-pos (point))
         (setf (point) target-pos)))))
