@@ -1,3 +1,8 @@
+2002-07-02 09:52 UTC+0100  Dave Pearson  <davep@davep.org>
+
+	* xbase.el (xbase-indent-line): Modified the code so that the
+	indent level is only calculated once.
+
 2002-07-01 04:54 UTC Mike Romberg <romberg@fsl.noaa.gov>
 
 	* xbase.el (xbase-indent-line): Don't indent if the current line
